[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/tentacle.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[node name="Tentacle" type="MeshInstance" index="0"]

transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="ShootTween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="RepulseTween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="tween_completed" from="ShootTween" to="." method="_on_ShootTween_tween_completed"]

[connection signal="tween_completed" from="RepulseTween" to="." method="_on_RepulseTween_tween_completed"]


